# SchoolProjs

arraysort/: main.c
assignment3/: READ_ME.txt  main  main.c
assignment4/: .clang-tidy  READ_ME.txt  build.sh  main  main.c
binarysearchtreetest/: run.sh  tree.c
bitwisebinarydisplay/: main.c
c/: README.md  doxygen
christmastree/: main  main.c
ci/exercise3/: CMakeLists.txt  Makefile  README.md  exercise.txt  greet.cpp  greet.h  log.txt  run.sh  test.cpp
ci/exercise3/.github/workflows/: workflowaction.yml
ci/exercise4/: CMakeLists.txt  exercise.txt  llist.cpp  llist.h  test.cpp
ci/exercise8s/: CMakeLists.txt  exercise.txt  queue.hpp  test.cpp
ci/exercise8s/.github/workflows/: pr_main.yml
ci/exercise8s/github/workflows/: push_nonmain.yml
classfileio/: main
debugtest/: main  main.c
exercise10/: main  main.c
exercise11/: main
exercise12/: main  main.c
exercise13/: main  main.c
exercise14/: main
exercise15/: main.c
exercise16/: main
exercise17/: main.c
exercise19/: main
exercise20/: main.c
exercise21/: main
exercise22/: main  main.c
exercise23/: main
exercise24/: main  main.c
exercise25/: main
exercise26/: main  main.c
exercise27/: main  main.c
exercise28/: main  main.c
exercise29/: main  main.c
exercise30/: main.c
exercise31/: main  main.c
exercise32/: main  main.c
exercise33/: main  main.c
exercise34/: main.c
exercise35/: main
exercise37/: main.c
exercise38/: .clang-format  main.c
exercise40/: linkedlist.h  main  main.c  run.sh
exercise41/: basic_node.c  basic_node.h  main  main.c  run.sh
(+293 files in other folders)
